# com.mobilerpgpack.phone

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  gradle.properties  release-keystore.properties  settings.gradle  sign-key.jks
.github/workflows/: cleanup.yml  main.yml  opengles2_0.yml  opengles3_2.yml
CTranslate2/: build.gradle
CTranslate2Proxy/: build.gradle
CTranslate2Proxy/src/main/java/com/mobilerpgpack/ctranslate2proxy/: CTranslate2TranslationProxy.kt  M2M100Translator.kt  OpusMtTranslator.kt  Small100Translator.kt  Translator.kt
CTranslate2Proxy/src/main/jni/: Android.mk
CTranslate2Proxy/src/main/jni/src/: M2M100Translator.cpp  NLLB200Translator.cpp  OpusMtTranslator.cpp  Small100Translator.cpp  TranslationProxy.cpp  Utils.cpp
NG-GL4ES/: build.gradle
NG-GL4ES/src/androidTest/java/com/mobilerpgpack/phone/ng_gl4es/: ExampleInstrumentedTest.java
NG-GL4ES/src/test/java/com/mobilerpgpack/phone/ng_gl4es/: ExampleUnitTest.java
Translator/: build.gradle
Translator/src/main/jni/: Android.mk
Translator/src/main/jni/include/: Translator.h
Translator/src/main/jni/src/: Translator.cpp
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/mobilerpgpack/phone/: ExampleInstrumentedTest.kt
app/src/fdroid/java/com/mobilerpgpack/phone/translator/models/: MLKitTranslationModel.kt
app/src/google/java/com/mobilerpgpack/phone/translator/models/: MLKitTranslationModel.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/game_files/: gamecontrollerdb.txt  gm.sf2
app/src/main/assets/game_files/PsyDoom/: cheats_cfg.ini  graphics_cfg.ini  multiplayer_cfg.ini
app/src/main/assets/game_files/com.codelobster/PsyDoom/: audio_cfg.ini  control_bindings.ini  game_cfg.ini  graphics_cfg.ini  input_cfg.ini
app/src/main/assets/game_files/doom64ex-plus/: doom64ex-plus.wad
app/src/main/assets/game_files/opus-ct2-en-ru/: config.json  shared_vocabulary.json
app/src/main/java/com/mobilerpgpack/phone/: CustomApp.kt
app/src/main/java/com/mobilerpgpack/phone/engine/: Engine.kt  EngineInfo.kt  EngineLibs.kt  EngineTypes.kt
app/src/main/java/com/mobilerpgpack/phone/engine/activity/: Doom64GameActivity.kt  DoomRpgSeriesGameActivity.kt  EngineActivity.kt  SDL2GameActivity.kt  SDL3GameActivity.kt
app/src/main/java/com/mobilerpgpack/phone/engine/engineinfo/: CommonDoomRpgComposeSettings.kt  Doom2RpgComposeSettings.kt  Doom2RpgEngineInfo.kt  Doom64ComposeSettings.kt  Doom64EngineInfo.kt  Doom64EnhancedEngineInfo.kt  DoomRPGSeriesEngineInfo.kt  DoomRpgComposeSettings.kt  DoomRpgEngineInfo.kt  EngineInfo.kt  IEngineInfo.kt  IEngineUIController.kt  SDL2EngineInfo.kt  SDL3EngineInfo.kt  WolfensteinRpgComposeSettings.kt  WolfensteinRpgEngineInfo.kt
app/src/main/java/com/mobilerpgpack/phone/main/: KoinApplication.kt  KoinModules.kt  KoinModulesProvider.kt  MainApplication.kt  NativeLibsNames.kt
app/src/main/java/com/mobilerpgpack/phone/net/: DriveDownloader.kt  IDriveDownloader.kt
app/src/main/java/com/mobilerpgpack/phone/presenter/: MainActivityPresenter.kt
app/src/main/java/com/mobilerpgpack/phone/translator/: EngineTypeConverter.kt  ITranslationManager.kt  ITranslationModelsDownloader.kt  IntervalMarkerTranslator.kt  MLKitTranslationModel.kt  OpusMtTranslationModel.kt  TranslationDao.kt  TranslationDatabase.kt  TranslationEntry.kt  TranslationManager.kt  TranslationModel.kt  TranslationModelsDownloader.kt  TranslationType.kt  TranslationUtils.kt  Translator.kt  TranslatorApp.kt
app/src/main/java/com/mobilerpgpack/phone/translator/models/: BaseM2M100TranslationModel.kt  BingTranslatorEndPoint.java  BingTranslatorModel.kt  GoogleTranslateV2.kt  ITranslationModel.kt  M2M100TranslationModel.kt  MLKitTranslationModel.kt  NLLB200TranslationModel.kt  OpusMtTranslationModel.kt  Small100TranslationModel.kt  TranslationModel.kt  TranslationResult.kt  TranslationType.kt
app/src/main/java/com/mobilerpgpack/phone/translator/sql/: EngineTypeConverter.kt  TranslationDao.kt  TranslationDatabase.kt  TranslationEntry.kt
app/src/main/java/com/mobilerpgpack/phone/ui/: Theme.kt
app/src/main/java/com/mobilerpgpack/phone/ui/activity/: ConfigureControlsActivity.kt  MainActivity.kt  (+1 more)
app/src/main/java/com/mobilerpgpack/phone/utils/: AssetExtractor.kt  CustomPreferenceHandler.kt  Extensions.kt  IAssetExtractor.kt  IKeyCodesProvider.kt  KeyCodesProvider.kt  PreferencesStorage.kt  Utils.kt
app/src/main/java/com/zxw/bingtranslateapi/: Languages.java
app/src/main/jni/: SDL3MouseIconHelper.c
app/src/main/res/layout/: engine_activity.xml  main_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: locales_config.xml
app/src/test/java/com/mobilerpgpack/phone/: ExampleUnitTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
file-picker/: build.gradle
fluidsynth/: build.gradle
fmod/: build.gradle
gl4es/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libpng/: build.gradle
libpng/src/androidTest/java/com/mobilerpgpack/phone/libpng/: ExampleInstrumentedTest.java
machine_translator/CTranslate2Proxy/: CMakeLists.txt  build.gradle
machine_translator/CTranslate2Proxy/src/main/java/com/mobilerpgpack/ctranslate2proxy/: M2M100Translator.kt  NLLB200Translator.kt  OpusMtTranslator.kt  Small100Translator.kt  Translator.kt
machine_translator/CTranslate2Proxy/src/main/jni/: Android.mk
machine_translator/CTranslate2Proxy/src/main/jni/src/: M2M100Translator.cpp  NLLB200Translator.cpp  OpusMtTranslator.cpp  Small100Translator.cpp  Utils.cpp
machine_translator/Translator/: build.gradle
machine_translator/Translator/src/main/jni/: Android.mk
machine_translator/Translator/src/main/jni/src/: Translator.cpp
openal/: build.gradle
sdl2-mixer/: build.gradle
sdl2-ttf/: build.gradle
sentencepiece/: build.gradle
(+63 files in other folders)
